--- a/buy&hold.ipynb
+++ b/buy&hold.ipynb
@@ -203,14 +203,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.1694752725170279\n"
+      "0.1570906351155263\n"
      ]
     }
    ],
    "source": [
     "from performance import get_total_return\n",
     "\n",
-    "buy_price = df[\"open\"].iloc[0]\n",
+    "buy_price = df[\"close\"].iloc[0]\n",
     "sell_price = df[\"close\"].iloc[-1]\n",
     "total_return = get_total_return(inital_value=buy_price, final_value=sell_price,)\n",
     "print(total_return)\n"
@@ -224,7 +224,7 @@
     {
      "data": {
       "text/plain": [
-       "0.04727811896054379"
+       "0.04399334675305955"
       ]
      },
      "execution_count": 3,
@@ -275,8 +275,8 @@
      "text": [
       "======Investment Summary======\n",
       "Strategy        : Buy&Hold\n",
-      "total_return    : 16.95\n",
-      "cagr            : 4.73\n",
+      "total_return    : 15.71\n",
+      "cagr            : 4.4\n",
       "mdd             : 74.23\n",
       "==============================\n"
      ]
