--- a/strategies/B&H/buy&hold.ipynb
+++ b/strategies/B&H/buy&hold.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -181,7 +181,7 @@
        "[1237 rows x 7 columns]"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -189,14 +189,20 @@
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
+    "import sys\n",
+    "import os\n",
+    "sys.path.append(os.path.abspath(os.path.join(os.getcwd(), '../../')))\n",
     "\n",
-    "df = pd.read_csv(\"data/total_4am.csv\", index_col=0)\n",
+    "\n",
+    "\n",
+    "df = pd.read_csv(os.path.join(os.getcwd(), \"../../data/total_4am.csv\"), index_col=0)\n",
+    "\n",
     "df\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -218,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -227,7 +233,7 @@
        "0.04399334675305955"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -242,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -251,7 +257,7 @@
        "0.7423167267226642"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -266,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
