--- a/strategies/ma/sma_all_cut.ipynb
+++ b/strategies/ma/sma_all_cut.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,25 +39,55 @@
     "        df['signal'] = 0  # Default to no position\n",
     "        for i in range(200, len(df)):\n",
     "            # Buy condition\n",
-    "            if df['close'].iloc[i] >= df[f'{interval}_ma'].iloc[i]:\n",
+    "            if df['close'].iloc[i] >= df[f'{interval}_ma'].iloc[i] and df['close'].iloc[i-1] < df[f'{interval}_ma'].iloc[i-1]:\n",
     "                df.loc[i, 'signal'] = 1\n",
     "            # Sell condition\n",
     "            elif df['close'].iloc[i] < df[f'{interval}_ma'].iloc[i]:\n",
     "                df.loc[i, 'signal'] = -1\n",
     "\n",
-    "        # Manage positions\n",
+    "        # Manage positions with stop loss, take profit, and sell signal\n",
     "        df['position'] = 0\n",
+    "        df['entry_price'] = np.nan\n",
+    "        df['exit_price'] = np.nan\n",
     "        holding_position = False\n",
     "\n",
     "        for i in range(1, len(df)):\n",
     "            if df['signal'].iloc[i] == 1 and not holding_position:\n",
+    "                # Enter position\n",
     "                df.loc[i, 'position'] = 1\n",
+    "                df.loc[i, 'entry_price'] = df.loc[i, 'close']\n",
     "                holding_position = True\n",
-    "            elif df['signal'].iloc[i] == -1 and holding_position:\n",
-    "                df.loc[i, 'position'] = 0\n",
-    "                holding_position = False\n",
+    "            elif holding_position:\n",
+    "                # Calculate percentage change since entry\n",
+    "                entry_price = df['entry_price'].iloc[i-1]\n",
+    "                current_price = df['close'].iloc[i]\n",
+    "                percent_change = (current_price - entry_price) / entry_price * 100\n",
+    "\n",
+    "                if df['signal'].iloc[i] == -1:  # Sell signal condition\n",
+    "                    # print(f\"cond1 on{i}\")\n",
+    "                    df.loc[i, 'position'] = 0\n",
+    "                    df.loc[i, 'exit_price'] = current_price\n",
+    "                    holding_position = False\n",
+    "                elif percent_change <= -5:  # Stop loss condition\n",
+    "                    # print(f\"cond2 on{i}\")\n",
+    "                    df.loc[i, 'position'] = 0\n",
+    "                    df.loc[i, 'exit_price'] = current_price\n",
+    "                    holding_position = False\n",
+    "                # elif percent_change >= 30:  # Take profit condition\n",
+    "                #     print(f\"cond3 on{i}\")\n",
+    "                #     df['position'].iloc[i] = 0\n",
+    "                #     df['exit_price'].iloc[i] = current_price\n",
+    "                #     holding_position = False\n",
+    "                else:\n",
+    "                    # Continue holding the position if no sell conditions are met\n",
+    "                    # df['position'].iloc[i] = df['position'].iloc[i-1]\n",
+    "                    df.loc[i, 'position'] = df.loc[i-1, 'position']\n",
+    "                    # df['entry_price'].iloc[i] = df['entry_price'].iloc[i-1]\n",
+    "                    df.loc[i, 'entry_price'] = df.loc[i-1, 'entry_price']\n",
     "            else:\n",
-    "                df.loc[i, 'position'] = df['position'].iloc[i-1]\n",
+    "                # No signal and no position\n",
+    "                # df['position'].iloc[i] = df['position'].iloc[i-1]\n",
+    "                df.loc[i, 'position'] = df.loc[i-1, 'position']\n",
     "\n",
     "        # Calculate the strategy returns (only when in a long position)\n",
     "        df['strategy_returns'] = df['position'].shift(1) * df['close'].pct_change()\n",
@@ -69,10 +99,10 @@
     "        df['benchmark_returns'] = (1 + df['close'].pct_change()).cumprod()\n",
     "\n",
     "        # Save the results to a CSV file\n",
-    "        df.to_csv(f\"../../results/ma/ma{(interval)}.csv\")\n",
+    "        df.to_csv(f\"../../results/ma/ma{(interval)}_cut.csv\")\n",
     "\n",
     "        # Get performance metrics and plot the results\n",
-    "        get_performance(df=df, title=f\"ma_{interval}\")\n",
+    "        get_performance(df=df, title=f\"ma_{interval}_cut\")\n",
     "\n",
     "        \n",
     "    df = original_df.copy()  # Create a fresh copy for each interval\n"
@@ -80,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -88,53 +118,53 @@
      "output_type": "stream",
      "text": [
       "======Investment Summary======\n",
-      "Strategy        : ma_5\n",
-      "total_return    : 150.28\n",
-      "cagr            : 38.11\n",
+      "Strategy        : ma_5_cut\n",
+      "total_return    : 143.93\n",
+      "cagr            : 37.2\n",
       "mdd             : 44.87\n",
-      "investing_days  : 1037\n",
+      "investing_days  : 1029\n",
       "==============================\n",
       "======Investment Summary======\n",
-      "Strategy        : ma_10\n",
-      "total_return    : 87.0\n",
-      "cagr            : 24.65\n",
-      "mdd             : 38.32\n",
-      "investing_days  : 1037\n",
+      "Strategy        : ma_10_cut\n",
+      "total_return    : 88.58\n",
+      "cagr            : 25.24\n",
+      "mdd             : 37.57\n",
+      "investing_days  : 1029\n",
       "==============================\n",
       "======Investment Summary======\n",
-      "Strategy        : ma_20\n",
-      "total_return    : 104.39\n",
-      "cagr            : 28.61\n",
-      "mdd             : 43.81\n",
-      "investing_days  : 1037\n",
+      "Strategy        : ma_20_cut\n",
+      "total_return    : 114.78\n",
+      "cagr            : 31.29\n",
+      "mdd             : 40.04\n",
+      "investing_days  : 1025\n",
       "==============================\n",
       "======Investment Summary======\n",
-      "Strategy        : ma_50\n",
-      "total_return    : 109.17\n",
-      "cagr            : 29.66\n",
-      "mdd             : 42.29\n",
-      "investing_days  : 1037\n",
+      "Strategy        : ma_50_cut\n",
+      "total_return    : 118.84\n",
+      "cagr            : 32.98\n",
+      "mdd             : 34.89\n",
+      "investing_days  : 1003\n",
       "==============================\n",
       "======Investment Summary======\n",
-      "Strategy        : ma_90\n",
-      "total_return    : 56.29\n",
-      "cagr            : 17.02\n",
-      "mdd             : 44.25\n",
-      "investing_days  : 1037\n",
+      "Strategy        : ma_90_cut\n",
+      "total_return    : 90.56\n",
+      "cagr            : 30.62\n",
+      "mdd             : 33.59\n",
+      "investing_days  : 881\n",
       "==============================\n",
       "======Investment Summary======\n",
-      "Strategy        : ma_120\n",
-      "total_return    : 66.8\n",
-      "cagr            : 19.73\n",
-      "mdd             : 42.49\n",
-      "investing_days  : 1037\n",
+      "Strategy        : ma_120_cut\n",
+      "total_return    : 103.38\n",
+      "cagr            : 34.33\n",
+      "mdd             : 28.58\n",
+      "investing_days  : 878\n",
       "==============================\n",
       "======Investment Summary======\n",
-      "Strategy        : ma_200\n",
-      "total_return    : 100.91\n",
-      "cagr            : 27.83\n",
-      "mdd             : 29.39\n",
-      "investing_days  : 1037\n",
+      "Strategy        : ma_200_cut\n",
+      "total_return    : 162.81\n",
+      "cagr            : 84.27\n",
+      "mdd             : 22.45\n",
+      "investing_days  : 577\n",
       "==============================\n"
      ]
     }
