--- a/strategies/ma/sma_all_cut_highest.ipynb
+++ b/strategies/ma/sma_all_cut_highest.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,12 +19,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "from performance import get_performance\n",
+    "from performance import get_performance, draw_graph\n",
     "\n",
     "def various_ma(interval_list, df):\n",
     "\n",
@@ -124,6 +124,7 @@
     "\n",
     "        # Get performance metrics and plot the results\n",
     "        get_performance(df=df, title=f\"ma_{interval}_cut_highest\")\n",
+    "        # draw_graph(df=df)\n",
     "\n",
     "        \n",
     "    df = original_df.copy()  # Create a fresh copy for each interval\n"
@@ -131,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -143,70 +144,70 @@
       "total_return    : 143.93\n",
       "cagr            : 37.2\n",
       "mdd             : 44.87\n",
-      "investing_days  : 1029\n",
       "total_return_w_fee : 47.36\n",
       "cagr_w_fee      : 14.74\n",
       "mdd_w_fee       : 55.76\n",
+      "investing_days  : 1029\n",
       "==============================\n",
       "======Investment Summary======\n",
       "Strategy        : ma_10_cut_highest\n",
       "total_return    : 103.48\n",
       "cagr            : 28.66\n",
       "mdd             : 32.64\n",
-      "investing_days  : 1029\n",
       "total_return_w_fee : 49.54\n",
       "cagr_w_fee      : 15.34\n",
       "mdd_w_fee       : 41.09\n",
+      "investing_days  : 1029\n",
       "==============================\n",
       "======Investment Summary======\n",
       "Strategy        : ma_20_cut_highest\n",
       "total_return    : 159.16\n",
       "cagr            : 40.37\n",
       "mdd             : 29.0\n",
-      "investing_days  : 1025\n",
       "total_return_w_fee : 112.19\n",
       "cagr_w_fee      : 30.72\n",
       "mdd_w_fee       : 36.15\n",
+      "investing_days  : 1025\n",
       "==============================\n",
       "======Investment Summary======\n",
       "Strategy        : ma_50_cut_highest\n",
       "total_return    : 156.02\n",
       "cagr            : 40.79\n",
       "mdd             : 24.53\n",
-      "investing_days  : 1003\n",
       "total_return_w_fee : 133.52\n",
       "cagr_w_fee      : 36.16\n",
       "mdd_w_fee       : 27.39\n",
+      "investing_days  : 1003\n",
       "==============================\n",
       "======Investment Summary======\n",
       "Strategy        : ma_90_cut_highest\n",
       "total_return    : 93.38\n",
       "cagr            : 31.42\n",
       "mdd             : 28.16\n",
-      "investing_days  : 881\n",
       "total_return_w_fee : 77.09\n",
       "cagr_w_fee      : 26.72\n",
       "mdd_w_fee       : 30.29\n",
+      "investing_days  : 881\n",
       "==============================\n",
       "======Investment Summary======\n",
       "Strategy        : ma_120_cut_highest\n",
       "total_return    : 19.46\n",
       "cagr            : 7.67\n",
       "mdd             : 24.37\n",
-      "investing_days  : 878\n",
       "total_return_w_fee : 11.61\n",
       "cagr_w_fee      : 4.67\n",
       "mdd_w_fee       : 26.31\n",
+      "investing_days  : 878\n",
       "==============================\n",
       "======Investment Summary======\n",
       "Strategy        : ma_200_cut_highest\n",
       "total_return    : 50.3\n",
       "cagr            : 29.4\n",
       "mdd             : 13.38\n",
-      "investing_days  : 577\n",
       "total_return_w_fee : 46.15\n",
       "cagr_w_fee      : 27.13\n",
       "mdd_w_fee       : 15.09\n",
+      "investing_days  : 577\n",
       "==============================\n"
      ]
     }
