--- a/strategies/momentum/simple_mmt_all_cut_entry.ipynb
+++ b/strategies/momentum/simple_mmt_all_cut_entry.ipynb
@@ -179,70 +179,69 @@
      "output_type": "stream",
      "text": [
       "======Investment Summary======\n",
-      "Strategy        : simple_mmt_30\n",
-      "total_return    : 152.29\n",
-      "cagr            : 40.52\n",
-      "mdd             : 18.06\n",
-      "total_return_w_fee : 116.71\n",
-      "cagr_w_fee      : 32.88\n",
-      "mdd_w_fee       : 20.31\n",
+      "Strategy        : simple_mmt_30_cut_entry\n",
+      "total_return    : 133.71\n",
+      "cagr            : 36.62\n",
+      "mdd             : 21.81\n",
+      "total_return_w_fee : 100.75\n",
+      "cagr_w_fee      : 29.2\n",
+      "mdd_w_fee       : 25.92\n",
       "investing_days  : 993\n",
       "==============================\n",
       "======Investment Summary======\n",
-      "Strategy        : simple_mmt_60\n",
-      "total_return    : 68.57\n",
-      "cagr            : 23.76\n",
-      "mdd             : 31.84\n",
-      "total_return_w_fee : 56.24\n",
-      "cagr_w_fee      : 19.98\n",
-      "mdd_w_fee       : 33.85\n",
+      "Strategy        : simple_mmt_60_cut_entry\n",
+      "total_return    : 85.62\n",
+      "cagr            : 28.73\n",
+      "mdd             : 33.5\n",
+      "total_return_w_fee : 72.04\n",
+      "cagr_w_fee      : 24.8\n",
+      "mdd_w_fee       : 35.46\n",
       "investing_days  : 894\n",
       "==============================\n",
       "======Investment Summary======\n",
-      "Strategy        : simple_mmt_90\n",
-      "total_return    : 1.26\n",
-      "cagr            : 0.53\n",
-      "mdd             : 29.43\n",
-      "total_return_w_fee : -7.27\n",
-      "cagr_w_fee      : -3.12\n",
-      "mdd_w_fee       : 34.73\n",
+      "Strategy        : simple_mmt_90_cut_entry\n",
+      "total_return    : 59.38\n",
+      "cagr            : 21.62\n",
+      "mdd             : 36.12\n",
+      "total_return_w_fee : 45.95\n",
+      "cagr_w_fee      : 17.21\n",
+      "mdd_w_fee       : 40.91\n",
       "investing_days  : 869\n",
       "==============================\n",
       "======Investment Summary======\n",
-      "Strategy        : simple_mmt_120\n",
-      "total_return    : 25.24\n",
-      "cagr            : 12.94\n",
-      "mdd             : 18.44\n",
-      "total_return_w_fee : 20.81\n",
-      "cagr_w_fee      : 10.76\n",
-      "mdd_w_fee       : 19.74\n",
+      "Strategy        : simple_mmt_120_cut_entry\n",
+      "total_return    : 82.31\n",
+      "cagr            : 38.37\n",
+      "mdd             : 21.92\n",
+      "total_return_w_fee : 75.86\n",
+      "cagr_w_fee      : 35.7\n",
+      "mdd_w_fee       : 23.16\n",
       "investing_days  : 675\n",
       "==============================\n",
       "======Investment Summary======\n",
-      "Strategy        : simple_mmt_150\n",
-      "total_return    : 107.1\n",
-      "cagr            : 33.45\n",
-      "mdd             : 9.26\n",
-      "total_return_w_fee : 101.38\n",
-      "cagr_w_fee      : 31.97\n",
-      "mdd_w_fee       : 10.31\n",
+      "Strategy        : simple_mmt_150_cut_entry\n",
+      "total_return    : 180.26\n",
+      "cagr            : 50.44\n",
+      "mdd             : 23.05\n",
+      "total_return_w_fee : 172.52\n",
+      "cagr_w_fee      : 48.78\n",
+      "mdd_w_fee       : 23.05\n",
       "investing_days  : 921\n",
       "==============================\n",
       "======Investment Summary======\n",
-      "Strategy        : simple_mmt_180\n",
-      "total_return    : 67.55\n",
-      "cagr            : 22.29\n",
-      "mdd             : 9.81\n",
-      "total_return_w_fee : 60.98\n",
-      "cagr_w_fee      : 20.4\n",
-      "mdd_w_fee       : 11.25\n",
+      "Strategy        : simple_mmt_180_cut_entry\n",
+      "total_return    : 123.79\n",
+      "cagr            : 36.91\n",
+      "mdd             : 26.56\n",
+      "total_return_w_fee : 115.45\n",
+      "cagr_w_fee      : 34.89\n",
+      "mdd_w_fee       : 26.56\n",
       "investing_days  : 936\n",
       "==============================\n"
      ]
     }
    ],
    "source": [
-    "# momentum_list = [30, 60, 90, 120, 150, 180, 360]\n",
     "momentum_list = [30, 60, 90, 120, 150, 180]\n",
     "various_momentum(momentum_list=momentum_list, df=df,)"
    ]
