--- a/strategies/momentum/simple_mmt_all_cut_highest.ipynb
+++ b/strategies/momentum/simple_mmt_all_cut_highest.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -179,7 +179,7 @@
      "output_type": "stream",
      "text": [
       "======Investment Summary======\n",
-      "Strategy        : simple_mmt_30\n",
+      "Strategy        : simple_mmt_30_cut_highest\n",
       "total_return    : 152.29\n",
       "cagr            : 40.52\n",
       "mdd             : 18.06\n",
@@ -189,7 +189,7 @@
       "investing_days  : 993\n",
       "==============================\n",
       "======Investment Summary======\n",
-      "Strategy        : simple_mmt_60\n",
+      "Strategy        : simple_mmt_60_cut_highest\n",
       "total_return    : 68.57\n",
       "cagr            : 23.76\n",
       "mdd             : 31.84\n",
@@ -199,7 +199,7 @@
       "investing_days  : 894\n",
       "==============================\n",
       "======Investment Summary======\n",
-      "Strategy        : simple_mmt_90\n",
+      "Strategy        : simple_mmt_90_cut_highest\n",
       "total_return    : 1.26\n",
       "cagr            : 0.53\n",
       "mdd             : 29.43\n",
@@ -209,7 +209,7 @@
       "investing_days  : 869\n",
       "==============================\n",
       "======Investment Summary======\n",
-      "Strategy        : simple_mmt_120\n",
+      "Strategy        : simple_mmt_120_cut_highest\n",
       "total_return    : 25.24\n",
       "cagr            : 12.94\n",
       "mdd             : 18.44\n",
@@ -219,7 +219,7 @@
       "investing_days  : 675\n",
       "==============================\n",
       "======Investment Summary======\n",
-      "Strategy        : simple_mmt_150\n",
+      "Strategy        : simple_mmt_150_cut_highest\n",
       "total_return    : 107.1\n",
       "cagr            : 33.45\n",
       "mdd             : 9.26\n",
@@ -229,7 +229,7 @@
       "investing_days  : 921\n",
       "==============================\n",
       "======Investment Summary======\n",
-      "Strategy        : simple_mmt_180\n",
+      "Strategy        : simple_mmt_180_cut_highest\n",
       "total_return    : 67.55\n",
       "cagr            : 22.29\n",
       "mdd             : 9.81\n",
